@@ -234,11 +234,13 @@ To build with g++ 12 or clang 15 the 'libfmt' library (and its header file)
 may need to be installed. In Debian/Ubuntu this can be done with
 'apt install libfmt-dev' .
 
+Instruction for using cmake are in the INSTALL file.
+
 
 Finally it is best to keep expectations low, especially if the
 /sys/class/typec directory doesn't exist ...
  
 
 Douglas Gilbert  <dgilbert@interlog.com>
-6th December 2023
-lsucpd version/release 0.91 [svn revision: 17]
+13th December 2023
+lsucpd pre-release 0.92 [svn revision: 21]
